--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "66f8a8bf",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+      "Mounted at /content/drive\n"
      ]
     }
    ],
@@ -21,34 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "282854e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: loguru in /usr/local/lib/python3.12/dist-packages (0.7.3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install loguru"
+    "!pip install loguru >> stdout.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "id": "a75293e6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from rich.traceback import install; install()\n",
     "from pathlib import Path \n",
     "import shutil\n",
     "import pandas as pd \n",
     "import numpy as np \n",
     "import tensorflow as tf \n",
+    "import tensorflow.keras.layers as layers\n",
     "from sklearn.model_selection import train_test_split\n",
     "import cv2\n",
     "import random\n",
@@ -57,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a77db3b3",
    "metadata": {},
    "outputs": [],
@@ -70,89 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "66bc6f43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dfs, test_dfs, val_dfs = [], [], []\n",
-    "\n",
-    "for path in ucf_dir.iterdir():\n",
-    "    if path.is_dir():\n",
-    "        folder_name = path.name\n",
-    "\n",
-    "        # find the .avi files\n",
-    "        avi_paths = list(path.glob(\"*.avi\"))\n",
-    "\n",
-    "        # create train, val, test split 60, 20, 20\n",
-    "        train_r, val_r, test_r = 0.6, 0.2, 0.2\n",
-    "        X_train, X_val = train_test_split(avi_paths, train_size=train_r)\n",
-    "        X_val, X_test = train_test_split(X_val, train_size= val_r / (val_r + test_r))\n",
-    "\n",
-    "        df_train = pd.DataFrame(X_train, columns=['path'])\n",
-    "        df_train['action'] = folder_name\n",
-    "\n",
-    "        df_val = pd.DataFrame(X_val, columns=['path'])\n",
-    "        df_val['action'] = folder_name\n",
-    "\n",
-    "        df_test = pd.DataFrame(X_test, columns=['path'])\n",
-    "        df_test['action'] = folder_name\n",
-    "\n",
-    "        train_dfs.append(df_train)\n",
-    "        val_dfs.append(df_val)\n",
-    "        test_dfs.append(df_test)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "887dc4da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = pd.concat(train_dfs)\n",
-    "val_df = pd.concat(val_dfs)\n",
-    "test_df = pd.concat(test_dfs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5ecd589b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipython-input-3698527561.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrive_dir\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34mf\"UCF101/train_paths.parquet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mval_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrive_dir\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34mf\"UCF101/val_paths.parquet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrive_dir\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34mf\"UCF101/test_paths.parquet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "train_df.to_csv(drive_dir / f\"UCF101/train_paths.parquet\", index=False)\n",
-    "val_df.to_csv(drive_dir / f\"UCF101/val_paths.parquet\", index=False)\n",
-    "test_df.to_csv(drive_dir / f\"UCF101/test_paths.parquet\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "id": "c5d2ea00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(drive_dir / f\"UCF101/train_paths.parquet\")"
+    "train_df = pd.read_csv(drive_dir / f\"UCF101/train_paths.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "5bdcbafa",
    "metadata": {},
    "outputs": [
@@ -162,7 +84,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "85e49a79",
    "metadata": {},
    "outputs": [],
@@ -270,61 +192,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
+   "id": "98783846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jav_df = train_df.loc[train_df.action == \"JavelinThrow\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "f98cf681",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = tf.data.Dataset.from_tensor_slices((train_df.path.values, train_df.action.values))\n",
+    "dataset = tf.data.Dataset.from_tensor_slices((jav_df.path.values, jav_df.class_idx.values))\n",
     "dataset = dataset.map(\n",
     "    lambda path, label: tf.py_function(\n",
     "        lambda p, l: (capture_frames(p.numpy().decode('utf-8')), l),\n",
     "        [path, label],\n",
-    "        [tf.float32, tf.string]\n",
+    "        [tf.float32, tf.int64]\n",
     "    )\n",
     ")\n",
     "batch_size = 32\n",
-    "dataset = dataset.batch(batch_size)\n",
-    "dataset = dataset.prefetch(tf.data.AUTOTUNE)\n",
-    "# for frames, label in dataset:\n",
-    "#     print(frames.shape)\n",
-    "#     break"
+    "dataset = dataset.batch(batch_size).shuffle(1000).prefetch(tf.data.AUTOTUNE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "b59554ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I will make the game scenes...\n",
-    "for frames, label in dataset:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbcbf767",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "c6a8c3cb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = next(iter(dataset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "f9bbb345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_cnn_backbone():\n",
+    "    input_layer = layers.Input(shape=(224, 224, 3))\n",
+    "\n",
+    "    x = input_layer # setting the input to a variable that changes is a common pattern\n",
+    "    \n",
+    "    # define the number of filters and where to add pooling\n",
+    "    filters = [2**(5 + i) for i in range(5) for _ in range(2)]\n",
+    "\n",
+    "    for i, filter_size in enumerate(filters):\n",
+    "        x = layers.Conv2D(filters=filter_size, kernel_size=(3, 3), padding='same')(x)\n",
+    "        x = layers.ReLU()(x)\n",
+    "        x = layers.BatchNormalization()(x)\n",
+    "\n",
+    "        if i % 2 != 0: # apply max pooling at 1, 3, 5, 7, 9 index; after 2nd layer of filters having the same size\n",
+    "            x = layers.MaxPooling2D((2, 2))(x)\n",
+    "    \n",
+    "    # finally to reduce the feature maps to flattened dimension or 1 x 1 \n",
+    "    # we use globalaveragepooling 2d which will take average across the \n",
+    "    # entire feature may and then the output will be number of channels\n",
+    "    x = layers.GlobalAveragePooling2D()(x)\n",
+    "\n",
+    "    model = tf.keras.Model(inputs=input_layer, outputs=x) \n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "9ca61156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_backbone = build_cnn_backbone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "3af40bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_cnn_lstm_model(cnn_backbone, num_classes=101):\n",
+    "    input_layer = layers.Input(shape=(32, 224, 224, 3))\n",
+    "    x = layers.TimeDistributed(cnn_backbone)(input_layer)\n",
+    "\n",
+    "    # apply the lstm\n",
+    "    x = layers.LSTM(256, return_sequences=False)(x)\n",
+    "    x = layers.Dense(128, activation='relu')(x)\n",
+    "    x = layers.Dense(num_classes)(x)\n",
+    "\n",
+    "    model = tf.keras.Model(inputs=input_layer, outputs=x)\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "e036d2d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = build_cnn_lstm_model(cnn_backbone, num_classes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "f7e55c09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='categorical_crossentropy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "e13145bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"functional_4\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1mModel: \"functional_4\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ input_layer_4 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)      │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>,   │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "│                                 │ <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)                     │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ time_distributed_1              │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">512</span>)        │     <span style=\"color: #00af00; text-decoration-color: #00af00\">4,720,160</span> │\n",
+       "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">TimeDistributed</span>)               │                        │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ lstm_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">256</span>)            │       <span style=\"color: #00af00; text-decoration-color: #00af00\">787,456</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)            │        <span style=\"color: #00af00; text-decoration-color: #00af00\">32,896</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_3 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)              │           <span style=\"color: #00af00; text-decoration-color: #00af00\">129</span> │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ input_layer_4 (\u001b[38;5;33mInputLayer\u001b[0m)      │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m224\u001b[0m,   │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│                                 │ \u001b[38;5;34m3\u001b[0m)                     │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ time_distributed_1              │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m, \u001b[38;5;34m512\u001b[0m)        │     \u001b[38;5;34m4,720,160\u001b[0m │\n",
+       "│ (\u001b[38;5;33mTimeDistributed\u001b[0m)               │                        │               │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ lstm_1 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m256\u001b[0m)            │       \u001b[38;5;34m787,456\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m)            │        \u001b[38;5;34m32,896\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_3 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1\u001b[0m)              │           \u001b[38;5;34m129\u001b[0m │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">5,540,641</span> (21.14 MB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m5,540,641\u001b[0m (21.14 MB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">5,536,673</span> (21.12 MB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m5,536,673\u001b[0m (21.12 MB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">3,968</span> (15.50 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m3,968\u001b[0m (15.50 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "cbb1e7ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(x[0], x[1])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9bbb345",
+   "id": "2b54550f",
    "metadata": {},
    "outputs": [],
    "source": []
